# Client

./: CMakeLists.txt  README.md  makefile
include/: BGRS_ConnectionHandler.h  BGRSconnectionHandler.h  Task.h
src/: BGRS_Client.cpp  BGRS_ConnectionHandler.cpp  BGRSclient.cpp  BGRSconnectionHandler.cpp  Task.cpp  echoClient.cpp
